# equity-trading-system

./: .gitignore  DEVELOPERS.md  cluster_up.sh  k3s_manager.sh
.github/workflows/: build-publish.yaml
api/app/core/: redis.py
api/app/services/: trade_services.py
backend/FastAPI/: README.md  main.py  pyproject.toml  requirements.txt
backend/Locust/: locustfile.py
backend/k8s/: Makefile  k3d-config.yaml
backend/k8s/flux-system/targets/: target-upstream.yaml
backend/k8s/manifests/: 01-fastapi.yaml  02-monitoring.yaml  03-dashboards.yaml  03-locust.yaml  dashboard.json
backend/k8s/manifests/overlays/dev-max/: kustomization.yaml
backend/k8s/manifests/overlays/dev-sean/: kustomization.yaml
db/redis-postgres-syncers/: Containerfile
frontend/: account_picker.py  accounts_pages.py  api_client.py  app_ui.py  persistent_login.py  positions_pages.py  theme.py  trade_history_pages.py
k8s/manifests/base/apps/db-syncer/: deployment.yaml
k8s/manifests/base/apps/error-pages/: kustomization.yaml
k8s/manifests/base/apps/fastapi/: deployment.yaml
k8s/manifests/base/apps/price-cacher/: deployment.yaml
k8s/manifests/base/apps/streamlit/: ingress-catchall.yaml  kustomization.yaml
k8s/manifests/base/data-layer/: kustomization.yaml
k8s/manifests/overlays/dev-sean/: kustomization.yaml
k8s/manifests/overlays/dev-will/: kustomization.yaml
k8s/manifests/overlays/dev-yehuda/: kustomization.yaml
k8s/manifests/overlays/upstream/: kustomization.yaml
make/: cluster.mk
web-ui/: app_ui.py  auth_pages.py  auth_state.py  mass_trade_page.py  trade_history_pages.py
(+14 files in other folders)
