[project]
name = "trading-api"
version = "0.1.0"
description = "API for booking trades"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis",
    "asyncpg",
    "passlib[bcrypt]",
    "pyjwt",
    "prometheus-fastapi-instrumentator",
    "msgpack>=1.2.1",
]
